--- a/Views/Measurements/Index.cshtml
+++ b/Views/Measurements/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<GymSharp.Models.Measurement>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Progress";
 }
 
-<h1>Index</h1>
+<h1>Progress</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
