--- a/Views/WorkoutPlans/Index.cshtml
+++ b/Views/WorkoutPlans/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<GymSharp.Models.WorkoutPlan>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Workout Plans";
 }
 
-<h1>Index</h1>
+<h1> Workout Plans </h1>
 
 <p>
     <a asp-action="Create">Create New</a>
