--- a/Views/Trainers/Index.cshtml
+++ b/Views/Trainers/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<GymSharp.Models.Trainer>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Trainers";
 }
 
-<h1>Index</h1>
+<h1>Trainers</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -12,6 +12,9 @@
 <table class="table">
     <thead>
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Id)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.FirstName)
             </th>
