--- a/Views/Exercises/Create.cshtml
+++ b/Views/Exercises/Create.cshtml
@@ -20,6 +20,7 @@
             <div class="form-group">
                 <label asp-for="TrainerId" class="control-label"></label>
                 <select asp-for="TrainerId" class ="form-control" asp-items="ViewBag.TrainerId"></select>
+                <span asp-validation-for="TrainerId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
